fix wrap

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -165,6 +165,7 @@ iframe.video {
 .nav > .container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 30px;
   padding-top: 200px;
 }
